package org.example.controller;
import io.javalin.http.Context;
import jakarta.servlet.http.HttpSession;

// Manages Auths across the app
public class AuthController {
    public void login(Context ctx) {

    }
    public void logout(Context ctx) {

    }

    public void checkLogin(Context ctx) {

    }

    public void register(Context ctx) {

    }


}
