package org.example.controller;

public class LoanController {
}
